# tiechu

./: .autotools  .cproject  .gitignore  .project  AUTHORS  Abacus.spec  Makefile  Makefile.am  Makefile.in  README  Tiechu.spec  aclocal.m4  autogen.sh  c  config.h  config.h.in  config.status  configure  configure.ac  configure~  i  ibus-viethoa.spec  ibus_viethoa.files  ibus_viethoa.includes  libtool
.dbeaver/: credentials-config.json  data-sources.json  project-metadata.json
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
config/: Abacus.conf  Makefile  Makefile.am  Makefile.in  Tiechu.conf  ibus_viethoa.conf
csdl/: Abacus.db  Makefile  Makefile.am  Makefile.in  chinese.sql  chinese2.sql  hanviet.sql  hanviet2.sql  hanviet3.sql  note  teochew.sql  teochew_2.sql  teochew_4.sql  teochew_4_1.sql  viethoa.db  viethoa.sql  viethoa2.sql  viethoa3.sql
engine/: Makefile.am  Makefile.in  enchant-python.xml  enchant-python.xml.in  ibus-engine-enchant-python
icons/: Makefile  Makefile.am  Makefile.in
m4/: Makefile  Makefile.am  Makefile.in
property/: Makefile  Makefile.am  Makefile.in  main.c  main_list.c  main_pane.c
property/.deps/: ibus_viethoa_property-main.Po
src/: ACandidateArray.c  ACandidateArray.h  ACandidateTable.c  ACandidateTable.h  AChineseMode.c  AChineseMode.h  AChineseTable.c  AChineseTable.h  AConfiguration.c  AConfiguration.h  ADatabase.c  ADatabase.h  AETelexTable.c  AETelexTable.h  AEnglishMode.c  AEnglishMode.h  AHanvietMode.c  AHanvietMode.h  AHanvietTable.c  AHanvietTable.h  AHelper.c  AHelper.h  AInterchangeMode.c  AInterchangeMode.h  ALTelexTable.c  ALTelexTable.h  ALogger.c  ALogger.h  APinyinEditor.c  APinyinEditor.h  APinyinTable.c  APinyinTable.h  APreedit.c  APreedit.h  APropertyList.c  APropertyList.h  ATelexEditor.c  ATelexEditor.h  ATelexEditor2.c  ATelexEditor2.h  (+148 more)
src/.deps/: ibus_engine_viethoa-VHBanglua.Po  ibus_engine_viethoa-VHBangtra.Po  ibus_engine_viethoa-VHBangtraTelex.Po  ibus_engine_viethoa-VHBangungtu.Po  ibus_engine_viethoa-VHCandidateArray.Po  ibus_engine_viethoa-VHCandidateTable.Po  ibus_engine_viethoa-VHCauhinh.Po  ibus_engine_viethoa-VHChineseMode.Po  ibus_engine_viethoa-VHChineseTable.Po  ibus_engine_viethoa-VHConfiguration.Po  ibus_engine_viethoa-VHDatabase.Po  ibus_engine_viethoa-VHETelexTable.Po  ibus_engine_viethoa-VHEnginePropertyList.Po  ibus_engine_viethoa-VHEnglishMode.Po  ibus_engine_viethoa-VHHelper.Po  ibus_engine_viethoa-VHInterchangeMode.Po  ibus_engine_viethoa-VHLTelexTable.Po  ibus_engine_viethoa-VHLogger.Po  ibus_engine_viethoa-VHLookupTable.Po  ibus_engine_viethoa-VHNTelexTable.Po  ibus_engine_viethoa-VHPinyinEditor.Po  ibus_engine_viethoa-VHPinyinTable.Po  ibus_engine_viethoa-VHPinyinTable_2.Po  ibus_engine_viethoa-VHPreedit.Po  ibus_engine_viethoa-VHPropertyList.Po  ibus_engine_viethoa-VHTelexEditor.Po  ibus_engine_viethoa-VHTelexEditor2.Po  ibus_engine_viethoa-VHTeochewEditor.Po  ibus_engine_viethoa-VHTeochewMode.Po  ibus_engine_viethoa-VHTeochewTable.Po  ibus_engine_viethoa-VHViethoaMode.Po  ibus_engine_viethoa-VHViethoaTable.Po  ibus_engine_viethoa-VHVietnameseMode.Po  ibus_engine_viethoa-VHZTelexTable.Po  ibus_engine_viethoa-VHZTelexTable2.Po  ibus_engine_viethoa-engine.Po  ibus_engine_viethoa-main.Po  ibus_engine_viethoa-vhtelex.Po  ibus_engine_viethoa-vhustring.Po  ibus_engine_viethoa-vhutil.Po
